{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 1572,
  "lineage": "57ae0696-4f36-2407-77d4-bf2e6070fdc6",
  "resources": [
    {
      "module": "module.ec2_test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce21b51cb31a48b8",
            "arn": "arn:aws:ec2:us-west-2:098504033684:instance/i-0ad9a34e900153ff7",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "profile",
            "id": "i-0ad9a34e900153ff7",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aae7f5618efe9b5d",
            "private_dns": "ip-10-0-0-54.us-west-2.compute.internal",
            "private_ip": "10.0.0.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:098504033684:key/5734b325-94de-4320-81d3-b60b0b720a34",
                "volume_id": "vol-03889e4593b186906",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b8cf53fc4c72c72",
            "tags": {
              "Name": "test private api (delete me)"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09be3487b41f29d21"
            ]
          },
          "dependencies": [
            "module.S3.aws_kms_key.key",
            "module.S3.aws_s3_bucket.wheel_source_bucket",
            "module.dynamo.aws_dynamodb_table.participant_table",
            "module.dynamo.aws_dynamodb_table.wheel_table",
            "module.ec2_test.aws_iam_instance_profile.ec2_profile",
            "module.ec2_test.aws_iam_role.ec2_role",
            "module.ec2_test.aws_security_group.allow_https",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table_association.route_table_association",
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_security_group_rule.egress_dynamo",
            "module.vpc.aws_security_group_rule.egress_http",
            "module.vpc.aws_security_group_rule.egress_https",
            "module.vpc.aws_security_group_rule.ingress_http",
            "module.vpc.aws_security_group_rule.ingress_https",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.execute_api",
            "module.vpc.aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09233f370ea9baca7",
            "owner_id": "098504033684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private subnet route table"
            },
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef89a71dec51bb79",
            "route_table_id": "rtb-09233f370ea9baca7",
            "subnet_id": "subnet-01b8cf53fc4c72c72"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:098504033684:security-group/sg-09be3487b41f29d21",
            "description": "Allow https outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-09be3487b41f29d21",
            "ingress": [],
            "name": "allow_https",
            "name_prefix": null,
            "owner_id": "098504033684",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.S3.aws_kms_key.key",
            "module.S3.aws_s3_bucket.wheel_source_bucket",
            "module.dynamo.aws_dynamodb_table.participant_table",
            "module.dynamo.aws_dynamodb_table.wheel_table",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table_association.route_table_association",
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_security_group_rule.egress_dynamo",
            "module.vpc.aws_security_group_rule.egress_http",
            "module.vpc.aws_security_group_rule.egress_https",
            "module.vpc.aws_security_group_rule.ingress_http",
            "module.vpc.aws_security_group_rule.ingress_https",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.execute_api",
            "module.vpc.aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:098504033684:security-group/sg-03dd76cd456d64b4b",
            "description": "Endpoint Security Group",
            "egress": [],
            "id": "sg-03dd76cd456d64b4b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0f10fcace7970ed"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0f10fcace7970ed"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "endpoint_security_group",
            "name_prefix": null,
            "owner_id": "098504033684",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "use_endpoint_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:098504033684:security-group/sg-0b0f10fcace7970ed",
            "description": "Security Group that allows use of VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "52.94.28.0/23",
                  "52.94.10.0/24"
                ],
                "description": "DynamoDB service",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dd76cd456d64b4b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dd76cd456d64b4b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b0f10fcace7970ed",
            "ingress": [],
            "name": "use_endpoint_security_group",
            "name_prefix": null,
            "owner_id": "098504033684",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_dynamo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "52.94.28.0/23",
              "52.94.10.0/24"
            ],
            "description": "DynamoDB service",
            "from_port": 443,
            "id": "sgrule-2225257908",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b0f10fcace7970ed",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.dynamo.aws_dynamodb_table.participant_table",
            "module.dynamo.aws_dynamodb_table.wheel_table",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_vpc_endpoint.dynamodb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-260418833",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b0f10fcace7970ed",
            "self": false,
            "source_security_group_id": "sg-03dd76cd456d64b4b",
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2708207541",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b0f10fcace7970ed",
            "self": false,
            "source_security_group_id": "sg-03dd76cd456d64b4b",
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1359304018",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03dd76cd456d64b4b",
            "self": false,
            "source_security_group_id": "sg-0b0f10fcace7970ed",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2707262716",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03dd76cd456d64b4b",
            "self": false,
            "source_security_group_id": "sg-0b0f10fcace7970ed",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_security_group.use_endpoint_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:098504033684:subnet/subnet-01b8cf53fc4c72c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01b8cf53fc4c72c72",
            "map_public_ip_on_launch": false,
            "owner_id": "098504033684",
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:098504033684:vpc/vpc-03979ec8dd295d5ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05fe75390f9da88e5",
            "default_route_table_id": "rtb-0ba4a0f7b1f2ccd19",
            "default_security_group_id": "sg-0fae44e10b532465e",
            "dhcp_options_id": "dopt-a436c4dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03979ec8dd295d5ee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba4a0f7b1f2ccd19",
            "owner_id": "098504033684"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.94.28.0/23",
              "52.94.10.0/24"
            ],
            "id": "vpce-08857763bd6036f58",
            "owner_id": "098504033684",
            "policy": "{\"Statement\":[{\"Action\":[\"dynamodb:DeleteItem\",\"dynamodb:GetItem\",\"dynamodb:PutItem\",\"dynamodb:Scan\",\"dynamodb:Query\",\"dynamodb:UpdateItem\",\"dynamodb:BatchWriteItem\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":[\"arn:aws:dynamodb:us-west-2:098504033684:table/participantDynamoDBTable\",\"arn:aws:dynamodb:us-west-2:098504033684:table/wheelDynamoDBTable\"]}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-00a54069",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09233f370ea9baca7"
            ],
            "service_name": "com.amazonaws.us-west-2.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.dynamo.aws_dynamodb_table.participant_table",
            "module.dynamo.aws_dynamodb_table.wheel_table",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "execute_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-05d19278d496c242e-w4y7fjm8.execute-api.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-05d19278d496c242e-w4y7fjm8-us-west-2d.execute-api.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "execute-api.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z10044442DD40G6PAV48K"
              },
              {
                "dns_name": "*.execute-api.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z10044442DD40G6PAV48K"
              }
            ],
            "id": "vpce-05d19278d496c242e",
            "network_interface_ids": [
              "eni-065b3384de48eed05"
            ],
            "owner_id": "098504033684",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03dd76cd456d64b4b"
            ],
            "service_name": "com.amazonaws.us-west-2.execute-api",
            "state": "available",
            "subnet_ids": [
              "subnet-01b8cf53fc4c72c72"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.160.0/19",
              "52.218.128.0/17",
              "52.92.32.0/22"
            ],
            "id": "vpce-01c3ce90fd1b1439b",
            "owner_id": "098504033684",
            "policy": "{\"Statement\":[{\"Action\":\"s3:GetObject\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::awsopswheelsourcebucket-20200405223841571900000003/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09233f370ea9baca7"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03979ec8dd295d5ee"
          },
          "dependencies": [
            "module.S3.aws_kms_key.key",
            "module.S3.aws_s3_bucket.wheel_source_bucket",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}